--- a/styles/animations.css
+++ b/styles/animations.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+
 /* Опишите в этом файле все keyframes для проекта и стили анимаций иконки Like.
 
 Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
@@ -70,7 +70,8 @@
     transition: fill 0.3s 0.1s;
 }
 .card__icon-button .like-icon.is-liked .sparks {
-    animation: sparks 0.3s ease-in 0.3s;
+    animation: sparks 0.3s ease-in
+ 0.3s;
 }
 
 @keyframes heart-zoom {
