--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+
 /* Здесь вы напишете основную часть стилей страницы.
 
 Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
@@ -64,7 +64,7 @@
     background-blend-mode: hard-light;
 }
 
-.header {
+header {
     font-family: var(--ps2p-font, "sans-serif");
     margin: 100px auto;
     display: flex;
@@ -76,18 +76,18 @@
     background: var(--background-color);
     border: 2px solid var(--border-color);
 }
-.header h1 {
+header h1 {
     font-size: 65px;
     font-weight: normal;
 }
-.header h2 {
+header h2 {
     font-size: 23px;
     font-weight: normal;
     margin-top: 20px;
     text-transform: uppercase;
 }
 
-.main {
+main {
     display: flex;
     flex-direction: column;
     max-width: 700px;
@@ -99,29 +99,29 @@
     flex-direction: column;
     gap: 50px;
 }
-.cards .card {
+.card {
     display: flex;
     flex-direction: column;
     background: var(--background-color);
 }
-.cards .card .card__header {
+.card__header {
     padding: 5px 10px;
     border: 2px solid var(--border-color);
 }
-.cards .card .card__header .card__header-heading {
+.card__header-heading {
     font-size: 18px;
     font-variation-settings: "wght" var(--card-headers-width);
 }
-.cards .card .card__img {
+.card__img {
     border-left: 2px solid var(--border-color);
     border-right: 2px solid var(--border-color);
     position: relative;
 }
-.cards .card .card__img img {
+.card__img img {
     width: 100%;
     display: block;
 }
-.cards .card .card__img .card__img-text {
+.card__img-text {
     font-family: var(--ps2p-font, "sans-serif");
     position: absolute;
     top: 25px;
@@ -130,28 +130,28 @@
     font-size: 14px;
     text-shadow: -1px 0 var(--stroke-color), 0 1px var(--stroke-color), 1px 0 var(--stroke-color), 0 -1px var(--stroke-color);
 }
-.cards .card .card__footer {
+.card__footer {
     padding: 25px;
     border: 2px solid var(--border-color);
 }
-.cards .card .card__footer .card__footer-text {
+.card__footer-text {
     line-height: 21px;
     font-size: 18px;
 }
-.cards .card .card__footer .card__footer-text:not(:last-child) {
+.card__footer-text:not(:last-child) {
     margin-bottom: 27px;
 }
-.cards .card .card__footer .card__footer-buttons {
+.card__footer-buttons {
     margin-top: 25px;
     display: flex;
     justify-content: end;
     gap: 8px;
 }
-.cards .card .card__footer .card__footer-buttons .card__like-button {
+.card__like-button {
     width: 130px;
     height: 38px;
 }
-.cards .card .card__footer .card__footer-buttons .card__like-button .button__text {
+.button__text {
     font-family: var(--ps2p-font, "sans-serif");
     font-size: 14px;
     line-height: 90%;
@@ -169,6 +169,7 @@
     width: 21px;
     height: 21px;
     filter: brightness(0) invert(1);
+    z-index: 100;
     transition: filter 0.3s ease;
 }
 
@@ -190,88 +191,77 @@
     background: var(--background-modal-color);
     opacity: 75%;
 }
-.save__modal .content__modal {
+.content__modal {
     display: flex;
     margin-bottom: 30px;
     gap: 20px;
 }
-.save__modal .content__modal .floppy__icon__wrapper {
+.floppy__icon__wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.save__modal .content__modal .floppy__icon__wrapper .floppy__icon {
+.floppy__icon {
     width: 39px;
     height: 39px;
 }
-.save__modal .content__modal .modal__text {
+.modal__text {
     line-height: 150%;
     text-transform: uppercase;
 }
-.save__modal .button__OK {
+.button__OK {
     width: 100%;
     height: 38px;
 }
 
-.image2 {
-    filter: grayscale(80%);
-}
-
-.image3 {
-    filter: saturate(400%);
-}
-
-.image4 {
-    filter: hue-rotate(25deg);
-}
-
-.image5 {
-    filter: invert(100%);
-}
-
-.image6 {
-    filter: sepia(80%);
-}
-
-.image7 {
-    filter: blur(5px);
-}
-
-.image8 {
-    filter: blur(3px) hue-rotate(70deg) sepia(50%);
-}
-
-@supports (text-stroke: 1px var(--stroke-color)) or (-webkit-text-stroke: 1px var(--stroke-color)) {
-    .card__text {
-        text-stroke: 1px var(--stroke-color);
-        -webkit-text-stroke: 1px var(--stroke-color);
-    }
-}
-@media (max-width: 500px) {
-    .header h1 {
-        font-size: 49px;
+    .image2 {
+        filter: grayscale(80%);
     }
 
-    .header h2 {
-        font-size: 14px;
+    .image3 {
+        filter: saturate(400%);
     }
 
-    .button__save {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 15px 20px;
-    }
-    .button__save .floppy__icon {
-        width: 28px;
-        height: 28px;
-
+    .image4 {
+        filter: hue-rotate(25deg);
     }
 
-    .floppy__icon {
-        width: 28px;
-        height: 28px;
+    .image5 {
+        filter: invert(100%);
     }
-}
+
+    .image6 {
+        filter: sepia(80%);
+    }
+
+    .image7 {
+        filter: blur(5px);
+    }
+
+    .image8 {
+        filter: blur(3px) hue-rotate(70deg) sepia(50%);
+    }
+    @media (max-width: 500px) {
+        header h1 {
+            font-size: 49px;
+        }
+
+        header h2 {
+            font-size: 14px;
+        }
+
+        .button__save {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 15px 20px;
+        }
+
+        .button__save .floppy__icon {
+            width: 28px;
+            height: 28px;
+
+        }
+    }
 
